--- a/week-2/01-async-js/package.json
+++ b/week-2/01-async-js/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "This folder contains assignments related to asynchronous JavaScript.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "1-promisify-setTimeout": "npx jest ./tests/1-promisify-setTimeout.test.js",
     "2-sleep-completely": "npx jest ./tests/2-sleep-completely.test.js",
     "3-promise-all": "npx jest ./tests/3-promise-all.test.js",
@@ -14,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "lodash": "^4.17.21"
   }
 }
